--- a/.md
+++ b/.md
@@ -1,60 +1,61 @@
-### Blog Post One
+# Blog Post One
 
-      In order to find an easier way to create a new project, I wrote this shell script to easily create new folders and set up a github repo.
+In order to find an easier way to create a new project, I wrote this shell script to easily create new folders and set up a github repo.
 
-
-      I first started by writing some bash code in order to have all of the assets set into a folder that can be copied and made into a new project.
+I first started by writing some bash code in order to have all of the assets set into a folder that can be copied and made into a new project.
      
-      This bash code is set by using mkdir to create a folder and using touch to go inside the folder.
+This bash code is set by using mkdir to create a folder and using touch to go inside the folder.
 
-     `#!/bin/bash
-      # scafolds my project
+     #!/bin/bash
+     #scafolds my project
       mkdir myfolder
       touch myfolder/index.html
-      cd myfolder`
+      cd myfolder
 
-   Inside the folder, files are created and touched in order to work inside of them.
-` mkdir css js img
-touch css/style.css
-touch js/page.js
-touch readme.md`
+Inside the folder, files are created and touched in order to work inside of them.
 
-  Once inside the HTML, a basic boiler plate is set up in order to quickly create projects that are ready to be edited into websites. This basic boiler plate sets up the size of the site, adds a basic structure, and then links the css and js files.
+    mkdir css js img
+    touch css/style.css
+    touch js/page.js
+    touch readme.md
 
-`echo "<h1>hello, world</h1>" >> index.html
-echo "<!DOCTYPE html>" >> index.html
-echo "<html lang="en">" >> index.html
-echo  "<head>" >> index.html
-echo   "<meta charset="UTF-8">" >> index.html
-echo   "<meta name="viewport" content="width=device-width, initial-scale=1.0">" >> index.html
-echo    "<meta http-equiv="X-UA-Compatible" content="ie=edge">" >> index.html
-echo    "<title>title</title>" >> index.html
-echo    "<link rel="stylesheet" href="./style.css">" >> index.html
-echo  "</head>" >> index.html
-echo  "<body>" >> index.html
-echo   " <main>" >> index.html
-echo        "<h1>Title</h1> " >> index.html
-echo    "</main>" >> index.html
-echo  "<script src="data.js"></script>" >> index.html
-echo  "<script src="main.js"></script>" >> index.html
-echo "    <h1>If this is red, it's working.</h1>" >> index.html
-echo "  </body>" >> index.html
-echo "</html>" >> index.html
-echo "h1 {color:red;}" >> styles/style.css
-echo  "</body> " >> index.html
-echo "</html>" >> index.html
+Once inside the HTML, a basic boiler plate is set up in order to quickly create projects that are ready to be edited into websites. This basic boiler plate sets up the size of the site, adds a basic structure, and then links the css and js files.
 
-
-echo "body {">> css/style.css
-echo "font-family: 'Roboto', sans-serif:" >>css/style.css
-echo "font-size: 1rem:" >>css/style.css
-echo "}" >> css/style.css
-echo "h1 {color:red;}" >> css/style.css
+    echo "<h1>hello, world</h1>" >> index.html
+    echo "<!DOCTYPE html>" >> index.html
+    echo "<html lang="en">" >> index.html
+    echo  "<head>" >> index.html`
+    echo   "<meta charset="UTF-8">" >> index.html
+    echo   "<meta name="viewport" content="width=device-width, initial-scale=1.0">" >> index.html
+    echo    "<meta http-equiv="X-UA-Compatible" content="ie=edge">" >> index.html
+    echo    "<title>title</title>" >> index.html
+    echo    "<link rel="stylesheet" href="./style.css">" >> index.html
+    echo  "</head>" >> index.html
+    echo  "<body>" >> index.html
+    echo   " <main>" >> index.html
+    echo "<h1>Title</h1> " >> index.html
+    echo "</main>" >> index.html
+    echo  "<script src="data.js"></script>" >> index.html
+    echo  "<script src="main.js"></script>" >> index.html
+    echo "<h1>If this is red, it's working.</h1>" >> index.html 
+    echo "  </body>" >> index.html
+        
+    echo "</html>" >> index.html
+    echo "h1 {color:red;}" >> styles/style.css
+    echo  "</body> " >> index.html
+    echo "</html>" >> index.html`
 
 
-code index.html
-code modern-normalize.css
-code css/style.css`
+    echo "body {">> css/style.css
+    echo "font-family: 'Roboto', sans-serif:" >>css/style.css
+    echo "font-size: 1rem:" >>css/style.css
+    echo "}" >> css/style.css
+    echo "h1 {color:red;}" >> css/style.css
+
+
+    code index.html
+    code modern-normalize.css
+    code css/style.css
 
 Using this shell script, you are able to put it into your terminal and quickly create new projects.
 
